# insectnet

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: FROGNET_FIELD_PROBE.md  PERCH2_TRAINING_STRATEGY.md  PROVENANCE.md  SECURITY_AND_PRIVACY.md  UNKNOWN_LABEL_SEMANTICS.md  architecture.md  thresholds.md  validation.md
models/: README.md  classifier.joblib
models/chickennet-research-0.1.0-perch2/: MODEL_CARD.md  SHA256SUMS  chickennet-research-0.1.0-perch2.joblib  inat_challenge_report.json  private_local_frog_challenge_report.json  training_summary.json
models/chickennet-research-0.1.0-perch2/provenance/: esc50-source.json  esc50-summary.json  ross308-source.json  ross308-summary.json
models/insectnet-research-0.2.0-perch2/: MODEL_CARD.md  SHA256SUMS  inat_dog_negative_challenge_report.json  insectnet-research-0.2.0-perch2.joblib  private_local_frog_activation_report.json  training_summary.json
models/insectnet-research-0.2.0-perch2/provenance/: esc50-source.json  esc50-summary.json  inat-cat-negatives-summary.json  inat-chicken-negatives-summary.json  inat-dog-challenge-summary.json  insectset459-source.json  insectset459-summary.json  ross308-negatives-summary.json
scripts/: audit_candidate_challenge.py  build_esc50_corpora.py  build_frognet_corpora.py  build_inat_chicken_challenge.py  build_inat_taxon_negative_challenge.py  build_insectset_corpus.py  build_private_frog_challenge.py  build_ross308_corpus.py  capture.sh  deploy.sh  derive_negative_manifest.py  extract_perch_embeddings.py  fill_insectset_from_sources.py  subset_embeddings.py  train_perch_candidate.py
src/insectnet/: __init__.py  birdnet.py  candidate.py  capture.py  cli.py  frognet_corpus.py  model.py  predict.py  release.py  train.py
src/insectnet/data/: v0.1.0.manifest.json
tests/: test_candidate.py  test_cli.py  test_distribution.py  test_frognet_corpus.py  test_model.py  test_privacy.py  test_release.py  test_research_artifacts.py
