[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "insectnet"
version = "0.1.0"
description = "Real-time insect audio classifier for BirdNET-Pi"
readme = "README.md"
license = {text = "CC-BY-NC-SA-4.0"}
authors = [
    {name = "Pine Hollow Bioacoustics", email = "vortexpjeff@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bioacoustics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scikit-learn",
    "joblib",
    "librosa",
]

[project.optional-dependencies]
pi = ["tflite-runtime"]
dev = ["pytest", "ruff"]

[project.scripts]
insectnet-capture = "insectnet.capture:main"
insectnet-predict = "insectnet.predict:main"
insectnet-train = "insectnet.train:main"

[tool.setuptools.packages.find]
where = ["src"]
