[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "insectnet"
version = "0.1.0"
description = "Preserved BirdNET-logit research classifier for insect bioacoustics"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
license-files = ["LICENSE"]
authors = [{name = "The Vortex Project"}]
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.3",
  "numpy>=1.24",
  "scikit-learn==1.8.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
insectnet = "insectnet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
insectnet = ["data/*.joblib", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
